[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshadoz"
version = "0.3.dev0"
description = "pyshadoz is a pure Python package to read and write NASA Southern Hemisphere ADditional OZonesondes (SHADOZ) data"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["shadoz", "Southern Hemisphere ADditional OZonesondes", "ozonesonde", "tropics", "subtropics", "nasa", "wmo"]
authors = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
]
maintainers = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [
    "click"
]

[project.optional-dependencies]
dev = ["flake8"]
release = ["build", "twine", "wheel"]

[project.scripts]
pyshadoz = "pyshadoz:shadoz_info"

[project.urls]
homepage = "https://github.com/wmo-cop/pyshadoz"
source = "https://github.com/wmo-cop/pyshadoz"
documentation = "https://github.com/wmo-cop/pyshadoz"
issues = "https://github.com/wmo-cop/pyshadoz/issues"
